src/objects/Communication_Hub_Order__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>CASE(MONTH( DateValue(now()) ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</defaultValue>
        <label>Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>Text( Year(DateValue(now())) )</defaultValue>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Communication Hub Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHO-{00000}</displayFormat>
        <label>Comm_Hub_Ord</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Hub Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>